# nr

./: .gitignore  CMakeLists.txt  Justfile  README.md  xmake.lua
examples/: CMakeLists.txt  hello.cpp  vec.cpp  xmake.lua
src/: nr.cppm
